--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
     --border-radius: 12px;
     --inline-padding: 50px;
@@ -177,5 +181,7 @@ main {
 
 @media (prefers-color-scheme: dark) {
 }
+
+
 
 
