--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -5,7 +5,7 @@
     right: 0;
     width: 100%;
     font-size: 20px;
-    border-bottom: 1px solid #08010e33;
+    /* border-bottom: 1px solid #08010e33; */
     z-index: 900;
     padding-block: 20px;
     display: flex;
